@@ -2273,6 +2273,29 @@
                           </div>
                         </div>
                       </div>
+                      <div class="col-md-12 api_clients_row" id="api_extrahop_row">
+                        <div class="form-group">
+                          <label class="col-sm-3 control-label">{{ form.extrahop_host.label }}</label>
+                          <div class="col-sm-5">
+                            {{ form.extrahop_host }}
+                            {{ form.extrahop_host.errors|safe }}
+                          </div>
+                        </div>
+                        <div class="form-group">
+                          <label class="col-sm-3 control-label">{{ form.extrahop_id.label }}</label>
+                          <div class="col-sm-5">
+                            {{ form.extrahop_id }}
+                            {{ form.extrahop_id.errors|safe }}
+                          </div>
+                        </div>
+                        <div class="form-group">
+                          <label class="col-sm-3 control-label">{{ form.extrahop_secret.label }}</label>
+                          <div class="col-sm-5">
+                            {{ form.extrahop_secret }}
+                            {{ form.extrahop_secret.errors|safe }}
+                          </div>
+                        </div>
+                      </div>
                       <div class="col-md-12 api-mode">
                         <div class="text-center mar-btm">
                           <button class="btn btn-warning" id="test_api_parser" type="button">
